# nornir-starters

./: .gitignore  LICENSE  README.md  napalm_async_get_facts.py  napalm_get_facts.py  pyproject.toml
inventory/: config.yaml  groups.yaml  hosts.yaml
